<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Home"
    android:background="@drawable/gradient">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:alignmentMode="alignMargins"
            android:columnCount="2"
            android:columnOrderPreserved="false"
            android:rowCount="3"
            android:layout_marginTop="60dp">

            <androidx.cardview.widget.CardView

                android:id="@+id/tw"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:layout_margin="12dp"
                app:cardCornerRadius="36dp"
                app:elevation="40dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="#FFFFFF"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:paddingTop="16dp"
                    android:paddingBottom="16dp">

                    <ImageView
                        android:layout_width="110dp"
                        android:layout_height="100dp"
                        android:contentDescription="@string/todo"
                        android:src="@drawable/fourwheeler" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/two"
                        android:textColor="#FF023E63"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/wheeler"
                        android:textColor="#FF023E63"
                        android:textSize="18sp"
                        android:textStyle="bold" />
                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView

                android:id="@+id/fw"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:layout_margin="12dp"
                app:cardCornerRadius="36dp"
                app:elevation="60dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="#FFFFFF"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:contentDescription="@string/todo"
                        android:src="@drawable/fourwheeler" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/four"
                        android:textColor="#FF023E63"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/wheeler"
                        android:textColor="#FF023E63"
                        android:textSize="18sp"
                        android:textStyle="bold" />
                </LinearLayout>

            </androidx.cardview.widget.CardView>

        </GridLayout>


        <GridLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:alignmentMode="alignMargins"
            android:columnCount="2"
            android:columnOrderPreserved="false"
            android:rowCount="3">


            <androidx.cardview.widget.CardView

                android:id="@+id/hs"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:layout_margin="12dp"
                android:outlineAmbientShadowColor="@color/White"
                app:cardCornerRadius="36dp"
                app:elevation="60dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="#FFFFFF"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:paddingTop="16dp"
                    android:paddingBottom="16dp">

                    <ImageView
                        android:layout_width="110dp"
                        android:layout_height="100dp"
                        android:background="#FFFFFF"
                        android:contentDescription="@string/todo"
                        android:src="@drawable/i" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/hospital"
                        android:textColor="#FF023E63"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/services"
                        android:textColor="#FF023E63"
                        android:textSize="18sp"
                        android:textStyle="bold" />
                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:layout_margin="12dp"
                app:cardCornerRadius="36dp"
                app:elevation="60dp">

                <LinearLayout
                    android:id="@+id/rs"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="#FFFFFF"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:paddingTop="16dp"
                    android:paddingBottom="16dp">

                    <ImageView
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:contentDescription="@string/todo"
                        android:src="@drawable/logo3" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/refreshment"
                        android:textColor="#FF023E63"
                        android:textSize="18sp"
                        android:textStyle="bold"


                        />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/centres"
                        android:textColor="#FF023E63"
                        android:textSize="18sp"
                        android:textStyle="bold" />
                </LinearLayout>

            </androidx.cardview.widget.CardView>

        </GridLayout>


        <GridLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:alignmentMode="alignMargins"
            android:columnCount="2"
            android:columnOrderPreserved="false"
            android:rowCount="3">


            <androidx.cardview.widget.CardView

                android:id="@+id/cs"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:layout_margin="12dp"
                app:cardCornerRadius="36dp"
                app:elevation="60dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="#FFFFFF"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:paddingTop="16dp"
                    android:paddingBottom="16dp">

                    <ImageView
                        android:layout_width="110dp"
                        android:layout_height="100dp"
                        android:contentDescription="@string/todo"
                        android:src="@drawable/ic_call_black" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="12dp"
                        android:text="Emergency"
                        android:textColor="#FF023E63"
                        android:textSize="18sp"
                        android:textStyle="bold" />
                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView

                android:id="@+id/lg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:layout_margin="12dp"
                app:cardCornerRadius="36dp"
                app:elevation="60dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="#FFFFFF"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:paddingTop="16dp"
                    android:paddingBottom="16dp">

                    <ImageView
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:contentDescription="@string/todo"
                        android:src="@drawable/ic_logout" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="12dp"
                        android:text="@string/logout"
                        android:textColor="#FF023E63"
                        android:textSize="18sp"
                        android:textStyle="bold" />
                </LinearLayout>

            </androidx.cardview.widget.CardView>


        </GridLayout>


    </LinearLayout>

</ScrollView>